<resources>
    <string name="app_name">Ant</string>
    <string name="form_title_login">Авторизация</string>
	<string name="form_title_clientList">Ant</string>
    <string name="form_title_client">Клиент</string>
    <string name="form_title_contacts">Контакты</string>
    <string name="form_title_remnants">Остатки</string>
    <string name="form_title_docSale">Заказ</string>
    <string name="form_title_preferences">Настройки</string>
    <string name="form_title_docList">Список документов</string>
    <string name="form_title_docPayment">Оплата</string>
    <string name="form_title_item">Информация о товаре</string>
    <string name="form_title_statistics">Статистика</string>
    <string name="form_title_actions">Действия</string>
    <string name="form_title_itemList">Товары</string>
    <string name="form_title_synchronization">Синхронизация</string>
    <string name="form_title_selectColumns">Выберите колонки</string>
    <string name="form_title_selectItemGroup">Выберите группу</string>
    <string name="form_title_selectPrice">Выберите прайс</string>
    <string name="form_title_visit">Визит</string>
    <string name="form_title_aims">Цели на визит</string>
    <string name="form_title_comments">Комментарии</string>
    <string name="form_title_report_day_summaries">Итоги дня</string>
    <string name="form_title_report_visit_summaries">Итоги визита</string>
    <string name="form_title_document">Документ</string>
    <string name="form_title_plans">Планы</string>
    <string name="form_title_debts">Долги</string>
    <string name="form_title_debtNotification">Уведомление о долге</string>
    <string name="form_title_GPS">GPS</string>
    <string name="dialog_base_ok">Ok</string>
    <string name="dialog_base_yes">Да</string>
    <string name="dialog_base_cancel">Отмена</string>
	<string name="dialog_base_exceptionOnCreateDialog">Ошибка создания диалога</string>
    <string name="aim1">Презентовать акцию «Золотой кейс»</string>
    <string name="aim2">Провести презентацию новых продуктов</string>
    <string name="aim3">Ознакомить с новыми торговыми условиями</string>
    <string name="aim4">Выполнить сторчек</string>
    <string name="aims_total">Итого:</string>
	<string name="menu_synchronization">Синхронизация</string>
	<string name="menu_preferences">Настройки</string>
	<string name="menu_items">Товары</string>
	<string name="menu_address_book">Адресная книга</string>
	<string name="menu_day_summaries">План/Факт</string>
	<string name="menu_backup_db">Резервировать данные</string>
	<string name="menu_day_plans">Планы</string>
    <string name="tab_address">Адрес</string>
    <string name="tab_analytics">Аналитика</string>
    <string name="tab_docList">Документы</string>
    <string name="tab_visit">Визит</string>
    <string name="tab_docSale">Продажа</string>
    <string name="tab_strore_check">Доли полок</string>
    <string name="login_password">Введите пароль:</string>
    <string name="login_sample_saler">Иванов И.И.</string>
    <string name="client_list_route">Марш</string>
    <string name="client_list_routeDate">Дата маршрута:</string>
    <string name="client_list_debt">Долг</string>
    <string name="client_list_client_debt">Долг:</string>
    <string name="client_list_fitler1">АБВ</string>
    <string name="client_list_fitler2">ГДЕ</string>
    <string name="client_list_fitler3">ЖЗИ</string>
    <string name="client_list_fitler4">ЙКЛ</string>
    <string name="client_list_fitler5">МНО</string>
    <string name="client_list_fitler6">123</string>
    <string name="client_list_fitler7">ПРС</string>
    <string name="client_list_fitler8">ТУФ</string>
    <string name="client_list_fitler9">ХЦЧ</string>
    <string name="client_list_fitler10">ШЩЫ</string>
    <string name="client_list_fitler11">ЭЮЯ</string>
    <string name="client_list_fitler12">..</string>
    <string name="client_list_showPlansHeader">Подтверждение</string>
    <string name="client_list_showPlans">Посмотреть планы на день?</string>
    <string name="client_list_exitAppHeader">Подтверждение</string>
    <string name="client_list_exitAppMessage">Выйти из приложения?</string>
    <string name="client_list_exitAppOk">Да</string>
    <string name="client_list_exitAppCancel">Отмена</string>
    <string name="visit_step_client">Клиент</string>
    <string name="visit_step_contacts">Контакты</string>
    <string name="visit_step_docHeader">Документ</string>
    <string name="visit_step_remnants">Остатки</string>
    <string name="visit_step_docSale">Заказ</string>
    <string name="visit_step_exit">Завершить</string>
    <string name="visit_step_newDocSale">Новый</string>
    <string name="visit_step_docSaleList">Док-ты</string>
    <string name="visit_step_docPayment">Оплата</string>
    <string name="visit_step_startVisit">Начать визит</string>
    <string name="visit_step_endVisit">Завершить визит</string>
    <string name="visit_step_visit">Визит</string>
    <string name="visit_step_dpsm">DPSM</string>
    <string name="visit_step_debt">Долги</string>
    <string name="visit_step_debtNotification">Уведомление о долге</string>
    <string name="visit_step_visit_summaries">Итоги визита</string>
    <string name="visit_step_day_summaries">Итоги дня</string>
    <string name="visit_warning">Предупреждение</string>
    <string name="visit_start_visit_warning">Пожалуйста, сперва начните визит</string>
    <string name="visit_warning_ok">Ок</string>
    <string name="visit_end_visit_warning">Завершить визит?</string>
    <string name="visit_start_visit_confirm_title">Подтверждение</string>
    <string name="visit_select_visit_type_title">Выберите тип визита</string>
    <string name="visit_start_visit_confirm">Начать визит?</string>
    <string name="visit_start_visit_yes">Да</string>
    <string name="visit_start_visit_select">Выбрать</string>
    <string name="visit_start_visit_cancel">Отмена</string>
    <string name="visit_inefficient_visit_warning">Документы не созданы в текущем визите. Укажите причину.</string>
    <string name="visit_storecheck_pg_warning">Необходимо заполнить и сохранить анкету в шаге Сторчек PG</string>
    <string name="client_tab_debt">Долг</string>
    <string name="client_tab_contract">Договор</string>
    <string name="client_tab_additional">Дополнение</string>
    <string name="client_tab_requisites">Реквизиты</string>
    <string name="client_tab_address">Адрес</string>
    <string name="client_tab_contacts">Контакты</string>
    <string name="client_sumDebt">Долг:</string>
    <string name="client_sumDebtToday">Забрать сегодня:</string>
    <string name="client_saldo">Долг по клиенту:</string>
    <string name="client_sumDebtResp">Просрочено по клиенту:</string>
    <string name="client_allowedCredit">Допустимый кредит:</string>
    <string name="client_respCredit">Просроченный кредит:</string>
    <string name="client_comments">Примечания:</string>
    <string name="client_namePrint">Полное наименование:</string>
    <string name="client_contract">Договор:</string>
    <string name="client_contract_num">№</string>
    <string name="client_contract_from">від</string>
    <string name="client_resp1">Отсрочка I:</string>
    <string name="client_resp2">II:</string>
    <string name="client_discount">Скидка:</string>
    <string name="doc_sale_actions_selectColumns">Выбрать колонки</string>
    <string name="doc_sale_actions_updateDiscounts">Обновить скидки</string>
    <string name="doc_sale_actions_calcPredictOrders">Расчет рек. заказа</string>
    <string name="doc_sale_actions_docCopyItoII">Переместить с I в II</string>
    <string name="doc_sale_actions_docCopyIItoI">Переместить с II в I</string>
    <string name="doc_sale_actions_docComplete">Завершить документ</string>
	<string name="preferences_grid_row_height_key">gridRowHeight</string>
	<string name="preferences_grid_row_height_title">Высота строки грида</string>
	<string name="preferences_grid_row_height_summary">Используется при отображении информации на гриде (по умолчанию 40)</string>
	<string name="preferences_grid_row_height_dialog_title">Введите высоту строки грида</string>
	<string name="preferences_grid_text_size_key">gridTextSize</string>
	<string name="preferences_grid_text_size_title">Размер шрифта грида</string>
	<string name="preferences_grid_text_size_summary">Используется при отображении информации на гриде (по умолчанию 16)</string>
	<string name="preferences_grid_text_size_dialog_title">Введите размер шрифта грида</string>
	<string name="preferences_grid_fling_velocity_key">gridFlingVelocity</string>
	<string name="preferences_grid_fling_velocity_title">Скорость скроллинга грида</string>
	<string name="preferences_grid_fling_velocity_summary">Используется при скроллинге информации на гриде (по умолчанию 15)</string>
	<string name="preferences_grid_fling_velocity_dialog_title">Введите скорость скроллинга грида</string>
<string name="app_info">v 1.0</string>
<string name="preferences_grid_category_name">Настройки грида</string>
<string name="preferences_cetegory_name_sync">Синхронизация</string>
<string name="preference_title_last_sync_date">Дата последней синхронизации</string>
<string name="preference_key_last_sync_date">lastSyncDate</string>
<string name="preference_key_last_sync_size_recieve">lastSyncSizeRecieve</string>
<string name="preference_title_last_sync_size_recieve">Последняя закачка</string>
<string name="preference_key_last_sync_size_send">lastSyncSizeSend</string>
<string name="preference_title_last_sync_size_send">Последняя отправка</string>
<string name="preference_key_month_sync_size_recieve">monthSyncSyzeRecieve</string>
<string name="preference_title_month_sync_size_recieve">Закачано с начала месяца</string>
<string name="preference_key_month_sync_size_send">monthSyncSyzeSend</string>
<string name="preference_title_month_sync_size_send">Отправлено с начала месяца</string>
<string name="preferences_cetegory_name_lang">Языковые настройки</string>
<string name="preference_key_lang">lang</string>
<string name="preference_title_lang">Язык</string>
<string name="preference_dialog_title_lang">Выберите язык:</string>
<string name="preference_summary_lang">Язык приложения.\nНеобходимо перезапустить приложение для принятия изменений.</string>
<string name="preferences_cetegory_name_document_form">Настройки формы документов</string>
<string name="preference_key_document_quick_keyboard_key">quickKeyb</string>
<string name="preference_title_document_quick_keyboard">Быстрая клавиатура</string>
<string name="preference_summary_document_quick_keyboard">Использовать быструю клавиатуру</string>
    <string name="form_title_cash_register">Касса</string>
	<string name="cash_reg_checkoutTape">3. Печать контрольной ленты</string>
	<string name="cash_reg_checkoutTape1">4. Закрыть контрольную ленту</string>
	<string name="cash_reg_ZReport">5. Печать Z-отчета</string>
	<string name="cash_reg_closeCheckoutTape">6. Обнулить контрольную ленту</string>
	<string name="cash_reg_selectDevice">Выбрать устройство</string>
	<string name="cash_reg_periodicReport">Отчет за период</string>
	<string name="cash_reg_XReport">1.Печать X-отчета</string>
	<string name="cash_reg_abortFiscal">Аннулировать незакрытый чек</string>
	<string name="cash_reg_moneyIn">Внесение денег в кассу</string>
	<string name="cash_reg_moneyOut">2.Изъятие денег из кассы</string>
	<string name="cash_reg_printFiscalCheck">Печать фискального чека</string>
	<string name="cash_reg_getVersion">Версия ПО</string>
	<string name="cash_reg_printNonFiscalCheck">Печать текста</string>
	<string name="cash_reg_departmentsReport">Отчет по отделам</string>
	<string name="cash_reg_operatorsReport">Отчет по операторам</string>
	<string name="cash_reg_restartDevice">Перезапуск устройства</string>
	<string name="cash_reg_readDate">Чтение даты и времени</string>
	<string name="clients_count">Клиентов: </string>
	<string name="visits_count">Визитов:</string>
	<string name="doc_sale_actions_docPrint">Печатать документ</string>
</resources>