<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.app.ant"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    >
	
		<LinearLayout		
		style="@style/ToolPanel"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"  	    
	    >    
			
			<ImageButton
			style="@style/CustomButton"
			android:id="@+id/buttonFilters"
			android:layout_gravity="right|center_vertical"
			android:gravity="center_vertical" 
			android:layout_width="50dp" 
			android:layout_height="45dp"
			android:src="@drawable/filter" />		
			
			<ToggleButton				
			style="@style/CustomToggleButton"
			android:id="@+id/chkBoxRoute"
			android:layout_width="60dp"  
			android:layout_height="match_parent"
			android:checked = "false"
			android:textOn="@string/client_list_route"
			android:textOff="@string/client_list_route"
			android:textSize="11dp"				
			android:drawableBottom="@drawable/toggle"
			/>
			
			<ImageButton
			style="@style/CustomButton"
			android:id="@+id/buttonAddRouteItem"
			android:layout_gravity="right|center_vertical"
			android:gravity="center_vertical" 
			android:layout_width="50dp" 
			android:layout_height="45dp"
			android:visibility="invisible"
			android:src="@drawable/plus_big_white" />			
			
		   	<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
	        android:id="@+id/datePanel"
	        android:clickable="true"
	        android:paddingLeft="3dip"
	        android:visibility="invisible"	    
		    >
				<TextView
				android:text="@string/client_list_routeDate"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"			
				android:textColor="#FFFFFF"
				android:textStyle="bold"
				android:maxLines="1"
				/>
				
				<TextView
				android:id="@+id/textRouteDate"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"			
				android:textColor="@color/item_info_color"
				android:maxLines="1"
				android:textAppearance="?android:attr/textAppearanceMedium"
				/>
			</LinearLayout>	
		    
			
						
			<!-- Spinner
			android:id="@+id/spnRegion"  
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="10pt"
			android:textColor="#000000"
			android:layout_weight="1"
			/-->
		    
		    <!-- TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		    /-->

	    
		    <TableLayout
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:paddingLeft="3dip"
		    	android:paddingRight="3dip"
		    	android:layout_gravity="right"
		   	>
		        <TableRow    		
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    	>
				   	
				    <TextView android:id="@+id/textTotalCountClients"
			        	android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:textColor="#FFFFFF"
						android:textStyle="bold"	
						android:text="@string/clients_count"
				    />				   	
				   	
				   	<TextView
						android:id="@+id/textTotalCount"  
	    				android:layout_width="wrap_content" 
	    				android:layout_height="wrap_content"
			        	android:layout_marginLeft="2dip"	    				
	    				android:textColor="@color/item_info_color"
	    				android:gravity="right" 
	    			/>				    	    	
				   	
				</TableRow>
				<TextView android:padding="2dip" android:layout_height="1dp" android:background="#FFFFFFFF" />
		        <TableRow    		
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    	>
				   	
				    <TextView android:id="@+id/textVisitedCountClients"
			        	android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:textColor="#FFFFFF"
						android:textStyle="bold"	
						android:text="@string/visits_count"
				    />	
				    				   	
				   	<TextView
						android:id="@+id/textVisitedCount"  
		    			android:layout_width="wrap_content" 
		    			android:layout_height="wrap_content"
		    			android:textColor="@color/item_info_color"
		    			android:gravity="right" 
	    			/>				    	    	
				   	   	
				</TableRow>
				 
			</TableLayout>		    
		    
			
		</LinearLayout>		
		
    	<ExpandableListView android:id="@+id/clientAddrExpandableList"
        	android:layout_width="fill_parent" 
        	android:layout_height="fill_parent"
        	android:layout_marginRight="2dip"
        	android:layout_weight="1"
        />

        
	    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    style="@style/ToolPanel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/buttonFilterPlacement"
	    android:visibility="gone"
	   	>
	        <TableRow    		
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center_vertical"
	    	>
	    			<Button
	    			style="@style/AlphabetFilterButton"	    			
					android:id="@+id/buttonFilter1"
			   		android:text="@string/client_list_fitler1"
			   		/>
			   		
	    			<Button
	    			style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter2"
			   		android:text="@string/client_list_fitler2"
			   		/>
			   		
			   		<Button
			   		style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter3"
			   		android:text="@string/client_list_fitler3"
			   		/>
			   		
			   		<Button
			   		style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter4"
			   		android:text="@string/client_list_fitler4"
			   		/>
			   		
			   		<Button
			   		style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter5"
			   		android:text="@string/client_list_fitler5"
			   		/>

	    			<Button
			   		style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter6"
			   		android:text="@string/client_list_fitler6"
			   		/>
	    	
	    	</TableRow>
	    	  
	        <TableRow    		
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center_vertical"
	    	>
			   		<Button
			   		style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter7"
			   		android:text="@string/client_list_fitler7"
			   		/>

			   		<Button
			   		style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter8"
			   		android:text="@string/client_list_fitler8"
			   		/>
	    	
	    	
	    			<Button
	    			style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter9"
			   		android:text="@string/client_list_fitler9"
			   		/>

			   		<Button
			   		style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter10"
			   		android:text="@string/client_list_fitler10"
			   		/>

	    			<Button
	    			style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter11"
			   		android:text="@string/client_list_fitler11"
			   		/>

			   		<Button
			   		style="@style/AlphabetFilterButton"
					android:id="@+id/buttonFilter12"
			   		android:text="@string/client_list_fitler12"
			   		/>
			   		
	    	</TableRow>
		</TableLayout>
        
</LinearLayout>
