<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/LoginPopUp"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView  
    	android:id="@+id/login_saler"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/login_sample_saler"
    	android:gravity="center"
    	android:textSize="16dp"
    	android:textColor="#FFFFFFFF"
    />
        
    <TextView  
    	android:id="@+id/login_pass"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/login_password"
    	android:layout_gravity="left"
    	android:textSize="12dp"
    	android:textColor="#FFFFFFFF"
    />
    
	<EditText
		android:id="@+id/InputValue"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    />  
    
    <TextView  
    	android:id="@+id/login_app_info"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/app_info"
    	android:gravity="center"
    	android:textSize="10dp"    	
    	android:textColor="#FFFFFFFF"
    />      
        
</LinearLayout>
